--- a/package.json
+++ b/package.json
@@ -13,19 +13,27 @@
     "@react-spring/web": "^9.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-slick": "^0.29.0",
     "react-spring": "^9.7.1",
-    "sass": "^1.62.1"
+    "react-use-gesture": "^9.1.3",
+    "sass": "^1.62.1",
+    "three": "^0.152.2",
+    "vanilla-tilt": "^1.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slick": "^0.23.10",
+    "@types/three": "^0.152.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
