--- a/package.json
+++ b/package.json
@@ -10,30 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-slick": "^0.29.0",
-    "react-spring": "^9.7.1",
-    "react-use-gesture": "^9.1.3",
-    "sass": "^1.62.1",
-    "three": "^0.152.2",
-    "vanilla-tilt": "^1.8.0"
+    "@react-three/drei": "^9.92.7",
+    "@react-three/fiber": "8.15.12",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-slick": "0.29.0",
+    "react-spring": "9.7.3",
+    "react-use-gesture": "9.1.3",
+    "sass": "1.69.6",
+    "three": "^0.160.0",
+    "vanilla-tilt": "1.8.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-slick": "^0.23.10",
-    "@types/three": "^0.152.1",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "prettier": "^2.8.8",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "vite-plugin-compression": "^0.5.1"
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
+    "@types/react-slick": "0.23.13",
+    "@types/three": "0.160.0",
+    "@typescript-eslint/eslint-plugin": "6.16.0",
+    "@typescript-eslint/parser": "6.16.0",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "eslint": "8.56.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "prettier": "3.1.1",
+    "typescript": "5.3.3",
+    "vite": "5.0.10",
+    "vite-plugin-compression": "0.5.1"
   }
 }
