--- a/package.json
+++ b/package.json
@@ -14,18 +14,11 @@
     "@react-three/fiber": "8.15.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-slick": "0.29.0",
-    "react-spring": "9.7.3",
-    "react-use-gesture": "9.1.3",
-    "sass": "1.69.6",
-    "three": "^0.160.0",
-    "vanilla-tilt": "1.8.1"
+    "sass": "1.69.6"
   },
   "devDependencies": {
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
-    "@types/react-slick": "0.23.13",
-    "@types/three": "0.160.0",
     "@typescript-eslint/eslint-plugin": "6.16.0",
     "@typescript-eslint/parser": "6.16.0",
     "@vitejs/plugin-react-swc": "3.5.0",
