--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,7 @@ frontend:
     preBuild:
       commands:
         - yarn install
+        - tsc -v
     build:
       commands:
         - npm run build
